# IPRecorder

./: .gitignore  .gitmodules  GSMSerial.py  GSMSerial.service  NetworkMonitoring.py  README.md  autoRemove  autoRemove.sh  clearLogs.sh  clearSysLogs.sh  mailManager.py
GSMEngine/: .clang-format  .clang-tidy  CMakeLists.txt  GSMManager.cpp  GSMManager.hpp  GSMTasks.cpp  GSMTasks.hpp  MANIFEST.in  Serial.cpp  Serial.hpp  copyToIPRecorder.sh  info.txt  main.cpp  rectangle.cpp  rectangle.hpp  rectangleWrapper.cpp  script.py  sendSmsEmulator.sh  setup.py
GSMEngine/GSMApp/: ATEmulator.sh  CMakeLists.txt  GSMApp.py  SerialConfig.hpp  main.cpp  receiveSmsEmulator.sh  requirements.txt  script.py  sendSmsEmulator.sh
GSMEngine/GSMManager/: ATCommander.cpp  ATCommander.hpp  ATCommanderScheduler.cpp  ATCommanderScheduler.hpp  ATConfig.hpp  CMakeLists.txt  GSMManager.cpp  GSMManager.hpp  GSMTasks.cpp  GSMTasks.hpp  Serial.cpp  Serial.hpp  Tasks.cpp  Tasks.hpp  Utils.cpp  Utils.hpp
GSMEngine/GSMManagerWrapper/: CMakeLists.txt  GSMManagerWrapper.cpp
MonitoringManager/: MonitoringManager.pyproject  copyToIPRecorder.sh  prepareEmulatorDirs.sh  requirements.txt  setup.py
MonitoringManager/MonitoringManager/: Alarm.py  CameraAnalyzer.py  Config.py  ConfigEmulator.py  Contacts.py  GSMSerial.py  Logger.py  MonitoringManager.py  NotificationManager.py  StatusManager.py  __init__.py  mailManager.py
MonitoringManager/scripts/: autoRemove.sh  clearLogs.sh  clearSysLogs.sh  monitoring.service
MonitoringManager/tests/: PhoneContacts_tests.py
